docs-archive/apache-airflow-providers-amazon/9.12.0/_sources/_api/airflow/providers/amazon/aws/sensors/ssm/index.rst.txt
airflow.providers.amazon.aws.sensors.ssm
========================================

.. py:module:: airflow.providers.amazon.aws.sensors.ssm


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.sensors.ssm.SsmRunCommandCompletedSensor


Module Contents
---------------

.. py:class:: SsmRunCommandCompletedSensor(*, command_id, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poke_interval = 120, max_retries = 75, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.sensors.base_aws.AwsBaseSensor`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.ssm.SsmHook`\ ]


   Poll the state of an AWS SSM Run Command until all instance jobs reach a terminal state. Fails if any instance job ends in a failed state.

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/sensor:SsmRunCommandCompletedSensor`

   :param command_id: The ID of the AWS SSM Run Command.

   :param deferrable: If True, the sensor will operate in deferrable mode. This mode requires aiobotocore
       module to be installed.
       (default: False, but can be overridden in config file by setting default_deferrable to True)
   :param poke_interval: Polling period in seconds to check for the status of the job. (default: 120)
   :param max_retries: Number of times before returning the current state. (default: 75)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: INTERMEDIATE_STATES
      :type:  tuple[str, Ellipsis]
      :value: ('Pending', 'Delayed', 'InProgress', 'Cancelling')



   .. py:attribute:: FAILURE_STATES
      :type:  tuple[str, Ellipsis]
      :value: ('Cancelled', 'TimedOut', 'Failed')



   .. py:attribute:: SUCCESS_STATES
      :type:  tuple[str, Ellipsis]
      :value: ('Success',)



   .. py:attribute:: FAILURE_MESSAGE
      :value: 'SSM run command sensor failed.'



   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: command_id


   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: poke_interval
      :value: 120



   .. py:attribute:: max_retries
      :value: 75



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


