docs-archive/apache-airflow-providers-amazon/9.25.0/_sources/_api/airflow/providers/amazon/aws/sensors/ssm/index.rst.txt
airflow.providers.amazon.aws.sensors.ssm
========================================

.. py:module:: airflow.providers.amazon.aws.sensors.ssm


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.sensors.ssm.SsmRunCommandCompletedSensor


Module Contents
---------------

.. py:class:: SsmRunCommandCompletedSensor(*, command_id, fail_on_nonzero_exit = True, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poke_interval = 120, max_retries = 75, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.sensors.base_aws.AwsBaseSensor`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.ssm.SsmHook`\ ]


   Poll the state of an AWS SSM Run Command until completion.

   Waits until all instance jobs reach a terminal state. Fails if any
   instance job ends in a failed state.

   .. seealso::
       For more information on how to use this sensor, take a look at the
       guide:
       :ref:`howto/sensor:SsmRunCommandCompletedSensor`

   :param command_id: The ID of the AWS SSM Run Command.
   :param fail_on_nonzero_exit: If True (default), the sensor will fail when the command
       returns a non-zero exit code. If False, the sensor will complete successfully
       for both Success and Failed command statuses, allowing downstream tasks to handle
       exit codes. AWS-level failures (Cancelled, TimedOut) will still raise exceptions.
       (default: True)
   :param deferrable: If True, the sensor will operate in deferrable mode.
       This mode requires aiobotocore module to be installed.
       (default: False, but can be overridden in config file by setting
       default_deferrable to True)
   :param poke_interval: Polling period in seconds to check for the status
       of the job. (default: 120)
   :param max_retries: Number of times before returning the current state.
       (default: 75)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used.
       If running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default
       boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore
       client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: INTERMEDIATE_STATES
      :type:  tuple[str, Ellipsis]
      :value: ('Pending', 'Delayed', 'InProgress', 'Cancelling')



   .. py:attribute:: FAILURE_STATES
      :type:  tuple[str, Ellipsis]
      :value: ('Cancelled', 'TimedOut', 'Failed')



   .. py:attribute:: SUCCESS_STATES
      :type:  tuple[str, Ellipsis]
      :value: ('Success',)



   .. py:attribute:: FAILURE_MESSAGE
      :value: 'SSM run command sensor failed.'



   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: command_id


   .. py:attribute:: fail_on_nonzero_exit
      :value: True



   .. py:attribute:: deferrable


   .. py:attribute:: poke_interval
      :value: 120



   .. py:attribute:: max_retries
      :value: 75



   .. py:method:: poke(context)


   .. py:method:: execute(context)


   .. py:method:: execute_complete(context, event = None)


